# sah_kd_tree

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  LICENSE  Makefile  README.md  _clang-format
cmake/: Assimp.cmake  CUDA.cmake  Qt.cmake  Shaders.cmake  Thrust.cmake  Utils.cmake  utils.cmake
data/: .gitignore
data/fuzz/: .gitignore
data/scenes/: .gitignore
debug/QtCreator/: thrusttypes.py
docs/: CMakeLists.txt  sah_kd_tree.cfg.in
src/: CMakeLists.txt
src/Builder/: Builder.cpp  Builder.hpp  CMakeLists.txt  main.cpp
src/Fuzz/: .gitignore  CMakeLists.txt  SahKdTreeFuzzer.cpp
src/SahKdTree/: Builder.cu  CMakeLists.txt  Utility.cuh  calculateRootNodeBbox.cu  calculateTriangleBbox.cu  decoupleEventBoth.cu  determinePolygonSide.cu  findPerfectSplit.cu  generateInitialEvent.cu  getSplittedPolygonCount.cu  mergeEvent.cu  selectNodeBestSplit.cu  separateSplittedPolygon.cu  setNodeCount.cu  setTriangle.cu  splitNode.cu  splitPolygon.cu  thinLayerNodeOffset.cu  updatePolygonNode.cu  updateSplittedPolygonNode.cu
src/SahKdTree/include/: SahKdTree.hpp
src/SahKdTree/include/SahKdTree/: Types.hpp
src/SceneLoader/: AssimpWrappers.cpp  CMakeLists.txt  SceneLoader.cpp
src/SceneLoader/include/: SceneLoader.hpp
src/builder/: CMakeLists.txt  build_from_triangles.cu  build_from_triangles.hpp  builder.cpp  builder.hpp  main.cpp
src/builder/tests/: CMakeLists.txt  builder_test.cpp  builder_tests.cpp
src/codegen/: CMakeLists.txt  generator.py  spirv_format.cpp.jinja2  spirv_format.hpp.jinja2  vulkan_utils.cpp.jinja2  vulkan_utils.hpp.jinja2
src/common/: CMakeLists.txt  config.hpp  version.hpp.in
src/engine/: CMakeLists.txt  buffer.hpp  command_buffer.cpp  command_buffer.hpp  command_pool.cpp  command_pool.hpp  context.cpp  context.hpp  debug_utils.cpp  debug_utils.hpp  descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  engine.cpp  engine.hpp  exception.cpp  exception.hpp  fence.cpp  fence.hpp  file_io.cpp  file_io.hpp  format.cpp  format.hpp  framebuffer.cpp  framebuffer.hpp  fwd.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  image.hpp  instance.cpp  instance.hpp  library.cpp  library.hpp  main.cpp  memory.cpp  memory.hpp  physical_device.cpp  physical_device.hpp  pipeline_cache.cpp  (+17 more)
src/engine/tests/: CMakeLists.txt  engine_test.cpp  push_constant_ranges_test.cpp
src/format/: CMakeLists.txt  vulkan.cpp  vulkan.hpp
src/format/tests/: format_test.cpp
src/fuzzer/: CMakeLists.txt  fuzzer.cpp  fuzzer.cu  fuzzer.hpp
src/renderer/: CMakeLists.txt  context.cpp  context.hpp  debug_utils.cpp  debug_utils.hpp  exception.cpp  exception.hpp  format.cpp  format.hpp  main.cpp  memory.cpp  memory.hpp  renderer.cpp  renderer.hpp  utils.cpp  utils.hpp  vma.cpp  vma.hpp
src/renderer/tests/: renderer_test.cpp
src/sah_kd_tree/: CMakeLists.txt  builder.cu  calculateLayerNodeOffset.cu  calculateRootNodeBbox.cu  calculateTriangleBbox.cu  calculate_root_node_bbox.cu  calculate_rope.cu  calculate_triangle_bbox.cu  caluculateRootNodeBbox.cu  check_tree.cu  decoupleEventBoth.cu  decoupleEventLeftRight.cu  decouple_event_both.cu  determinePolygonSide.cu  determine_polygon_side.cu  filter_layer_node_offset.cu  findPerfectSplit.cu  find_perfect_split.cu  generateInitialEvent.cu  generate_initial_event.cu  getSplittedPolygonCount.cu  get_splitted_polygon_count.cu  link_triangle.cu  mergeEvent.cu  merge_event.cu  populate_leaf_node_triangle.cu  populate_leaf_node_triangle_range.cu  populate_leaf_node_triangles.cu  populate_node_parent.cu  resize_node.cu  sah_kd_tree.cu  sah_kd_tree.cuh  sah_kd_tree.hpp  selectNodeBestSplit.cu  select_node_best_split.cu  separateSplittedPolygon.cu  separate_splitted_polygon.cu  setNodeCount.cu  setTriangle.cu  set_node_count.cu  (+16 more)
src/sah_kd_tree/helpers/: geometry_types.cuh  setup.cu  setup.cuh
src/sah_kd_tree/include/: SahKdTree.hpp
src/sah_kd_tree/include/sah_kd_tree/: builder.hpp  config.hpp  projection.hpp  sah_kd_tree.hpp  tree.hpp
src/scene/: CMakeLists.txt  fwd.hpp  main.cpp  scene.cpp  scene.hpp
src/scene/tests/: scene_test.cpp
src/scene_data/: CMakeLists.txt  fwd.hpp  main.cpp  scene_data.cpp  scene_data.hpp
src/scene_data/tests/: CMakeLists.txt  scene_data_test.cpp
src/scene_loader/: CMakeLists.txt  assimp_wrappers.cpp  assimp_wrappers.hpp  assimpwrappers.cpp  assimpwrappers.hpp  fwd.hpp  geometry_types.hpp  scene_loader.cpp  scene_loader.hpp
src/scene_loader/include/: SceneLoader.hpp
src/scene_loader/include/scene_loader/: scene_loader.hpp
src/types/: CMakeLists.txt
src/types/include/sah_kd_tree/: types.hpp
src/utils/: CMakeLists.txt  assert.cpp  assert.hpp  auto_cast.cpp  auto_cast.hpp  checked_ptr.cpp  checked_ptr.hpp  exception.cpp  exception.hpp  fast_pimpl.cpp  fast_pimpl.hpp  log.cpp  log.hpp  math.cpp  math.hpp  mem_array.cpp  mem_array.hpp  memarray.cpp  memarray.hpp  meta.cpp  meta.hpp  noncopyable.cpp  noncopyable.hpp  overloaded.hpp  pp.hpp  random.cpp  random.hpp  scope_guard.cpp  scope_guard.hpp  utils.cpp  utils.hpp
src/utils/tests/: utils_test.cpp
src/viewer/: .gitignore  CMakeLists.txt  application.cpp  application.hpp  engine_io.cpp  engine_io.hpp  engine_wrapper.cpp  engine_wrapper.hpp  example_renderer.cpp  example_renderer.hpp  file_io.cpp  file_io.hpp  fullscreen_triangle.frag.glsl  fullscreen_triangle.vert.glsl  main.cpp  qml_engine_wrapper.cpp  renderer.cpp  renderer.hpp  renderer_io.cpp  renderer_io.hpp  resource_manager.cpp  resource_manager.hpp  scene_manager.cpp  scene_manager.hpp  squircle.frag.debug.spv  squircle.frag.glsl  squircle.vert.debug.spv  squircle.vert.glsl  ui.qml  utils.cpp  utils.hpp  viewer.cpp  viewer.hpp
src/viewer/qml/: qmldir  ui.qml
src/viewer/qml/components/: CenteredDialog.qml
src/viewer/shaders/: .gitignore  barycentric_color.frag.glsl  fullscreen_rect.vert.glsl  identity.vert.glsl  offscreen.frag.glsl  squircle.frag.glsl  uniform_buffer.glsl  wireframe.frag.glsl
src/viewer/tests/: CMakeLists.txt  viewer_test.cpp
test/: CMakeLists.txt
test/Builder/: CMakeLists.txt
test/sah_kd_tree/: CMakeLists.txt
(+66 files in other folders)
