project("sah_kd_tree")

add_library("${PROJECT_NAME}")
generate_export_header("${PROJECT_NAME}")
target_sources(
    "${PROJECT_NAME}"
    PRIVATE
        "${PROJECT_NAME}_export.h"
        "${PROJECT_NAME}.cuh"
        "types.cuh"
        "utility.cuh"
        "calculate_triangle_bbox.cu"
        "calculate_root_node_bbox.cu"
        "generate_initial_event.cu"
        "thin_layer_node_offset.cu"
        "find_perfect_split.cu"
        "select_node_best_split.cu"
        "determine_polygon_side.cu"
        "get_splitted_polygon_count.cu"
        "separate_splitted_polygon.cu"
        "decouple_event_both.cu"
        "update_polygon_node.cu"
        "split_polygon.cu"
        "update_splitted_polygon_node.cu"
        "merge_event.cu"
        "set_node_count.cu"
        "split_node.cu"
        "builder.cu"
        "helpers/setup.cuh"
        "helpers/setup.cu")
target_link_libraries(
    "${PROJECT_NAME}"
    PUBLIC
        CUDA::toolkit
        Thrust)
